--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@
   # uses: AhsanAyaz/angular-deploy-gh-pages-actions@26ffbdb76b46ce3d649d046f1f7f45099654cfd7
   jobs:
    build:
-    runs-on: ubuntu-latest
+    runs-on: Ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - name: All things angular
